ユーザー認証のテスト（2） -- アクションの仮実装 完了

--- a/app/views/top/_login_form.html.erb
+++ b/app/views/top/_login_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag '', id: 'new_session' do %>
+<%= form_tag :login, id: 'new_session' do %>
   <div>
     <%= label_tag 'username', 'ユーザー名' %>
     <%= text_field_tag 'username' %>
